Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85086

qmake-generated vcxproj files are broken

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • 6.0.0
    • Build tools: qmake
    • None
    • Windows
    • 2f2340c97e91c50fca42673a0ad8d0d3c193366b (qt/qtbase/dev)

    Description

      The qmake-generated vcxproj files are broken.
      Apparently the project configurations are empty.

      <ItemGroup Label="ProjectConfigurations" />
      

      Attachments

        For Gerrit Dashboard: QTBUG-85086
        # Subject Branch Project Status CR V

        Activity

          People

            owolff Oliver Wolff
            jbornema Joerg Bornemann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes