qmake: Fix generation of Visual Studio projects

While removing winrt code too much code was removed. The
ProjectConfiguration is needed for every Visual Studio project.

This patch amends 45b0f1be686cfba8dcecb9be5c875cae59c69276

Fixes: QTBUG-85086
Change-Id: Ic8b42583a159d5b69c0c4e82f46dd98ad8e54ce2
Reviewed-by: Miguel Costa <miguel.costa@qt.io>
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>